  enthalten ist entfernt (bug #4177).
- Bildergalerie speichert ihre DAV-Properties jetzt auch im XML.
- Zurückziehen von Objekten muss nochmals bestätigt werden, incl. Warnung über
  die Konsequenzen.
- Nachrichten werden nur noch im Fehlerfall 5s angezeigt, sonst 0.5.
- Metadaten eines Bildes beim Referenzieren korrekt eingebunden (bug #4189).

0.9.14 (2008-05-20)
-------------------

- Ein Objekt kann nur noch einmal ausgecheckt werden.
- Sortierung des Panels "Ausgecheckte Dokumente" korrigiert: das zuletzt
  ausgecheckte ist oben.
- Diverse Typos, Wording
- Sub-Navigation: Ermöglicht, dass es mehrere Subnavigations mit dem selben
  Namen gibt.
- Bilder/Links sind im WYSIWYG-Editor jetzt interne CMS-Links, damit z.B.
  Bilder inline sofort angezeigt werden können (bug #4163).
- WYSIWYG-Editor: Bild im Absatz einfügen löscht nicht mehr den Rest des
  Textes.
- WYSIWYG-Editor: Paste from Word erzeugt zuverlässiger Absätze
- Im Preview von ausgecheckten Dokumenten kann man jetzt "reload" drücken (und
  das Preview wird auch aktualisiert, Bug #4173)
- Artikel ist jetzt in einem eigenen Package: zeit.content.article


0.9.13 (2008-05-13)
-------------------

- Properties mit dem Namespace "DAV:" werden jetzt nicht mehr in XML-Dokumente
  kopiert (bug #4126).
- Filter in Dateiliste reagiert jetzt auf Dateinamen (bug #4132).
- Videos können jetzt im WYSIWYG-Editor bearbeitet und eingefügt werden (bug
  #4149).
- Neuer Contenttype: Portraitboxen (bug #3852).
- Portraitbox in Artikel verlinken (bug #4051).
- Behandlung von Clipboard-Einträgen auf gelöschte Objekte verbessert.
- Sortierung nach Änderungsdatum ging nicht immer (bug #4150).
- Wenn ein Verzeichnis XML-Resourcen enthält, die kein valides XML enthalten
  werden sie jetzt als unbekannte Resource interpretiert (bug #4151).  


0.9.12 (2008-04-30)
-------------------

- "Erstes Related als Box" (bug #4053).
- status=OK bei veröffentlichten Dokumenten (bug #4125).