@@ -75,4 +75,16 @@ def XMLReference(context):
         metadata,
         zeit.cms.content.interfaces.IXMLReference, name='image')
     image.set('base-id', context.uniqueId)
+
+    type = None
+    for sub_image_name in context:
+        base, ext = sub_image_name.rsplit('.', 1)
+        if type is None:
+            type = ext
+        elif type != ext:
+            # XXX test this path
+            raise ValueError("Invalid image group, mix of formats.")
+    if type is not None:
+        image.set('type', type)
+
     return image
